Ignore mLegendFrame as previous sibling since it does not live in the content area frame. b=345249 r+sr=bzbarsky